syntax = "proto3";

package calculator;
option go_package = "./calculator/calculatorpb";

message SumRequest {
    int32 firstNumber = 1;
    int32 secondNumber = 2;
}

message SumResponse {
    int32 result = 1;
}

message PrimeNumberDecompositionRequest {
    int32 number = 1;
}

message PrimeNumberDecompositionResponse {
    int32 primeFactor = 1;
}

message ComputeAverageRequest {
    int32 number = 1;
}

message ComputeAverageResponse {
    double average = 1;
}

message FindMaximumRequest {
    int32 number = 1;
}

message FindMaximumResponse {
    double maximum = 1;
}

message FindSquareRootRequest {
    int32 number = 1;
}

message FindSquareRootResponse {
    double result = 1;
}

service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse) {};
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};
    rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {};
    rpc FindSquareRoot(FindSquareRootRequest) returns (FindSquareRootResponse) {};
}
